--- a/pom.xml
+++ b/pom.xml
@@ -19,9 +19,9 @@
     <jenkins-test-harness.version>2.13</jenkins-test-harness.version>
   </properties>
 
-  <name>Hyper_ Commons Plugin</name>
-  <description>Hyper_ Commons Plugin for Jenkins</description>
-  <url>https://wiki.jenkins-ci.org/display/JENKINS/Hyper_+Commons+Plugin</url>
+  <name>Hyper.sh Commons Plugin</name>
+  <description>Hyper.sh Commons Plugin for Jenkins</description>
+  <url>https://wiki.jenkins-ci.org/display/JENKINS/Hyper.sh+Commons+Plugin</url>
 
   <licenses>
     <license>
